--- a/.github/workflows/master.workflow.yml
+++ b/.github/workflows/master.workflow.yml
@@ -87,54 +87,54 @@ jobs:
   #     #     fail_ci_if_error: true
 
   # Running cargo build
-  build:
-    # needs: [check, fmt, test]
-    needs: [check, fmt] 
-    name: Build
-    env:
-      PROJECT_NAME_UNDERSCORE: index-manager-main
-    runs-on: ubuntu-latest
-    steps:
-      - uses: actions/checkout@v2
-      - uses: actions-rs/toolchain@v1
-        with:
-          profile: minimal
-          toolchain: stable
-          override: true
-      - name: Release Build
-        run: cargo build --release
-      - name: 'Upload Artifact'
-        uses: actions/upload-artifact@v2
-        with:
-          name: ${{ env.PROJECT_NAME_UNDERSCORE }}
-          path: target/release/${{ env.PROJECT_NAME_UNDERSCORE }}
-  
-  # Running docker
-  # docker:
-  #   # needs: [build] 
-  #   name: Docker
+  # build:
+  #   # needs: [check, fmt, test]
+  #   needs: [check, fmt] 
+  #   name: Build
+  #   env:
+  #     PROJECT_NAME_UNDERSCORE: index-manager-main
   #   runs-on: ubuntu-latest
   #   steps:
-  #     - name: Check out the repo
-  #       uses: actions/checkout@v2
-      
-  #     - name: Log in to Docker Hub
-  #       uses: docker/login-action@f054a8b539a109f9f41c372932f1ae047eff08c9
+  #     - uses: actions/checkout@v2
+  #     - uses: actions-rs/toolchain@v1
   #       with:
-  #         username: ${{ secrets.DOCKER_USERNAME }}
-  #         password: ${{ secrets.DOCKER_PASSWORD }}
-      
-  #     - name: Extract metadata (tags, labels) for Docker
-  #       id: meta
-  #       uses: docker/metadata-action@98669ae865ea3cffbcbaa878cf57c20bbf1c6c38
+  #         profile: minimal
+  #         toolchain: stable
+  #         override: true
+  #     - name: Release Build
+  #       run: cargo build --release
+  #     - name: 'Upload Artifact'
+  #       uses: actions/upload-artifact@v2
   #       with:
-  #         images: my-docker-hub-namespace/my-docker-hub-repository
+  #         name: ${{ env.PROJECT_NAME_UNDERSCORE }}
+  #         path: target/release/${{ env.PROJECT_NAME_UNDERSCORE }}
+  
+  # Running docker
+  docker:
+    # needs: [build] 
+    name: Docker
+    runs-on: ubuntu-latest
+    steps:
+      - name: Check out the repo
+        uses: actions/checkout@v2
       
-  #     - name: Build and push Docker image
-  #       uses: docker/build-push-action@ad44023a93711e3deb337508980b4b5e9bcdc5dc
-  #       with:
-  #         context: ./chain-reader
-  #         push: true
-  #         tags: ${{ steps.meta.outputs.tags }}
-  #         labels: ${{ steps.meta.outputs.labels }}
+      - name: Log in to Docker Hub
+        uses: docker/login-action@f054a8b539a109f9f41c372932f1ae047eff08c9
+        with:
+          username: ${{ secrets.DOCKER_USERNAME }}
+          password: ${{ secrets.DOCKER_PASSWORD }}
+      
+      - name: Extract metadata (tags, labels) for Docker
+        id: meta
+        uses: docker/metadata-action@98669ae865ea3cffbcbaa878cf57c20bbf1c6c38
+        with:
+          images: my-docker-hub-namespace/my-docker-hub-repository
+      
+      - name: Build and push Docker image
+        uses: docker/build-push-action@ad44023a93711e3deb337508980b4b5e9bcdc5dc
+        with:
+          context: ./chain-reader
+          push: true
+          tags: ${{ steps.meta.outputs.tags }}
+          labels: ${{ steps.meta.outputs.labels }}
 
