--- a/chain-reader/Dockerfile
+++ b/chain-reader/Dockerfile
@@ -14,6 +14,7 @@ RUN $HOME/.cargo/bin/rustup target add wasm32-unknown-unknown --toolchain stable
 COPY ./ massbitprotocol
 WORKDIR "massbitprotocol"
 
+RUN ls
 RUN $HOME/.cargo/bin/rustup toolchain install nightly-2021-05-20
 RUN $HOME/.cargo/bin/rustup target add wasm32-unknown-unknown --toolchain nightly-2021-05-20
 RUN $HOME/.cargo/bin/cargo build --release
