--- a/.github/workflows/master.workflow.yml
+++ b/.github/workflows/master.workflow.yml
@@ -100,6 +100,8 @@ jobs:
           profile: minimal
           toolchain: stable
           override: true
+      - name: abc
+        run: ls -ll    
       - name: Release Build
         run: cargo build --release
       - name: 'Upload Artifact'
