--- a/.github/workflows/master.workflow.yml
+++ b/.github/workflows/master.workflow.yml
@@ -100,8 +100,8 @@ jobs:
           profile: minimal
           toolchain: stable
           override: true
-      - name: abc
-        run: ls -ll    
+      - name: Install missing dependencies
+        run: apt install -y cmake pkg-config libssl-dev git gcc build-essential clang libclang-dev libpq-dev 
       - name: Release Build
         run: cargo build --release
       - name: 'Upload Artifact'
