--- a/.github/workflows/master.workflow.yml
+++ b/.github/workflows/master.workflow.yml
@@ -51,8 +51,14 @@ jobs:
       - uses: actions-rs/toolchain@v1
         with:
           profile: minimal
-          toolchain: nightly
+          toolchain: stable
+          target: wasm32-unknown-unknown
           override: true
+      - name: Install missing dependencies
+        run: |
+          sudo apt install -y cmake pkg-config libssl-dev git gcc build-essential clang libclang-dev libpq-dev libudev-dev zlib1g-dev llvm make
+          rustup toolchain install nightly-2021-05-20
+          rustup target add wasm32-unknown-unknown --toolchain nightly-2021-05-20
       # - name: Cache dependencies
       #   uses: actions/cache@v2
       #   env:
