--- a/.github/workflows/master.workflow.yml
+++ b/.github/workflows/master.workflow.yml
@@ -42,9 +42,9 @@ jobs:
     name: Test
     env:
       PROJECT_NAME_UNDERSCORE: rust_ci_github_actions_workflow
-      CARGO_INCREMENTAL: 0
-      RUSTFLAGS: -Zprofile -Ccodegen-units=1 -Copt-level=0 -Clink-dead-code -Coverflow-checks=off -Zpanic_abort_tests -Cpanic=abort
-      RUSTDOCFLAGS: -Cpanic=abort
+      # CARGO_INCREMENTAL: 0
+      # RUSTFLAGS: -Zprofile -Ccodegen-units=1 -Copt-level=0 -Clink-dead-code -Coverflow-checks=off -Zpanic_abort_tests -Cpanic=abort
+      # RUSTDOCFLAGS: -Cpanic=abort
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v2
