--- a/.github/workflows/tag.workflow.yml
+++ b/.github/workflows/tag.workflow.yml
@@ -6,11 +6,12 @@ on:
       - v*
 
 jobs:
-  # Running cargo build
-  build:
-    name: Build
+  #################
+  # Running build #
+  ################# 
+  build-cargo:
+    name: Build Cargo (Chain Reader & Indexer)
     env:
-      ARTIFACT: massbitprotocol-artifact
       CHAIN_READER: chain-reader
       INDEXER: indexer-manager-main
     runs-on: ubuntu-latest
@@ -36,17 +37,32 @@ jobs:
       - name: Upload chain-reader artifact # We will use it in the next docker step 
         uses: actions/upload-artifact@v2
         with:
-          name: ${{ env.ARTIFACT }}
+          name: ${{ env.CHAIN_READER }}
           path: target/release/${{ env.CHAIN_READER }}
       - name: Upload indexer artifact # We will use it in the next docker step 
         uses: actions/upload-artifact@v2
         with:
-          name: ${{ env.ARTIFACT }}
+          name: ${{ env.INDEXER }}
           path: target/release/${{ env.INDEXER }}
-  
-  # Building docker image and upload to docker hub
-  docker:
-    needs: [build] 
+
+  build-python:
+    name: Build Python (Code-compiler)
+    env:
+      CODE_COMPILER: CODE_COMPILER
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v2
+      - name: Upload code-compiler artifact # We will use it in the next docker step 
+        uses: actions/upload-artifact@v2
+        with:
+          name: ${{ env.CODE_COMPILER }}
+          path: .
+
+  ##################
+  # Running docker #
+  ################## 
+  docker-cargo:
+    needs: [build-cargo] 
     name: Docker
     runs-on: ubuntu-latest
     steps:
@@ -65,6 +81,8 @@ jobs:
           echo ::set-output name=SOURCE_TAG::${GITHUB_REF#refs/tags/}
       - name: Download all workflow run artifacts
         uses: actions/download-artifact@v2
+      - name: List files
+        run: ls -ll
       - name: Build and push chain-reader docker image
         uses: docker/build-push-action@ad44023a93711e3deb337508980b4b5e9bcdc5dc
         with:
@@ -80,3 +98,32 @@ jobs:
           tags: ${{ steps.branch_info.outputs.SOURCE_TAG }}
           labels: indexer
 
+  docker-python:
+    needs: [build-python] 
+    name: Docker
+    runs-on: ubuntu-latest
+    steps:
+      - name: Check out the repo
+        uses: actions/checkout@v2
+      - name: Log in to Docker Hub
+        uses: docker/login-action@f054a8b539a109f9f41c372932f1ae047eff08c9
+        with:
+          username: ${{ secrets.DOCKER_USERNAME }}
+          password: ${{ secrets.DOCKER_PASSWORD }}
+      - name: Extract source (branch, name, tag)
+        id: source_info
+        run: |
+          echo ::set-output name=SOURCE_NAME::${GITHUB_REF#refs/*/}
+          echo ::set-output name=SOURCE_BRANCH::${GITHUB_REF#refs/heads/}
+          echo ::set-output name=SOURCE_TAG::${GITHUB_REF#refs/tags/}
+      - name: Download all workflow run artifacts
+        uses: actions/download-artifact@v2
+      - name: List files
+        run: ls -ll
+      - name: Build and push chain-reader docker image
+        uses: docker/build-push-action@ad44023a93711e3deb337508980b4b5e9bcdc5dc
+        with:
+          context: ./deployment/code-compiler
+          push: true
+          tags: ${{ steps.source_info.outputs.SOURCE_TAG }}
+          labels: chain-reader
