--- a/deployment/code-compiler/Dockerfile
+++ b/deployment/code-compiler/Dockerfile
@@ -22,6 +22,8 @@ RUN pip3 install -U ipfshttpclient
 RUN wget https://code-compiler-built-target.s3.ap-southeast-2.amazonaws.com/target.zip
 
 COPY ./ massbitprotocol
+
+RUN ls -ll
 RUN unzip -o target.zip -d massbitprotocol/code-compiler/stub/solana
 RUN unzip -o target.zip -d massbitprotocol/code-compiler/stub/substrate
 
