--- a/.github/workflows/tag.workflow.yml
+++ b/.github/workflows/tag.workflow.yml
@@ -106,10 +106,39 @@ jobs:
         run: ls -ll
       - name: Get our docker file to the main source so we have the massbitprotcol app context
         run: cp deployment/code-compiler/Dockerfile Dockerfile
-      - name: Build and push code-compiler image
+      - name: Build and push image
         uses: docker/build-push-action@v2
         with:
           context: .
           push: true
           tags: ${{ steps.source_info.outputs.SOURCE_TAG }}
           labels: code-compiler
+
+  docker-dashboard:
+    name: Docker Dashboard
+    runs-on: ubuntu-latest
+    steps:
+      - name: Check out the repo
+        uses: actions/checkout@v2
+      - name: Log in to Docker Hub
+        uses: docker/login-action@f054a8b539a109f9f41c372932f1ae047eff08c9
+        with:
+          username: ${{ secrets.DOCKER_USERNAME }}
+          password: ${{ secrets.DOCKER_PASSWORD }}
+      - name: Extract source (branch, name, tag)
+        id: source_info
+        run: |
+          echo ::set-output name=SOURCE_NAME::${GITHUB_REF#refs/*/}
+          echo ::set-output name=SOURCE_BRANCH::${GITHUB_REF#refs/heads/}
+          echo ::set-output name=SOURCE_TAG::${GITHUB_REF#refs/tags/}
+      - name: List files
+        run: ls -ll
+      - name: Get our docker file to the main source so we have the massbitprotcol app context
+        run: cp deployment/dashboard/Dockerfile Dockerfile
+      - name: Build and push image
+        uses: docker/build-push-action@v2
+        with:
+          context: .
+          push: true
+          tags: ${{ steps.source_info.outputs.SOURCE_TAG }}
+          labels: dashboard
