--- a/deployment/code-compiler/Dockerfile
+++ b/deployment/code-compiler/Dockerfile
@@ -23,8 +23,8 @@ RUN wget --no-verbose https://code-compiler-built-target.s3.ap-southeast-2.amazo
 RUN ls -ll
 COPY ./ massbitprotocol
 RUN ls -ll
-RUN unzip -o target.zip -d massbitprotocol/code-compiler/stub/solana
-RUN unzip -o target.zip -d massbitprotocol/code-compiler/stub/substrate
+RUN unzip -qo target.zip -d massbitprotocol/code-compiler/stub/solana
+RUN unzip -qo target.zip -d massbitprotocol/code-compiler/stub/substrate
 
 WORKDIR "massbitprotocol/code-compiler"
 
