--- a/.github/workflows/tag.workflow.yml
+++ b/.github/workflows/tag.workflow.yml
@@ -150,5 +150,7 @@ jobs:
         with:
           context: .
           push: true
-          tags: ${{ steps.source_info.outputs.SOURCE_TAG }}
-          labels: dashboard
+          tags: ${{ steps.meta.outputs.tags }}
+          labels: ${{ steps.meta.outputs.labels }}
+          # tags: ${{ steps.source_info.outputs.SOURCE_TAG }}
+          # labels: dashboard
