--- a/.github/workflows/tag.workflow.yml
+++ b/.github/workflows/tag.workflow.yml
@@ -39,18 +39,18 @@ jobs:
         with:
           name: ${{ env.CHAIN_READER }}
           path: target/release/${{ env.CHAIN_READER }}
-      # - name: Upload indexer artifact # We will use it in the next docker step 
-      #   uses: actions/upload-artifact@v2
-      #   with:
-      #     name: ${{ env.INDEXER }}
-      #     path: target/release/${{ env.INDEXER }}
+      - name: Upload indexer artifact # We will use it in the next docker step 
+        uses: actions/upload-artifact@v2
+        with:
+          name: ${{ env.INDEXER }}
+          path: target/release/${{ env.INDEXER }}
 
   ##################
   # Running docker #
   ################## 
-  docker-cargo:
+  docker-chain-reader:
     needs: [build-cargo] 
-    name: Docker Chain Reader & Indexer
+    name: Docker chain reader
     runs-on: ubuntu-latest
     steps:
       - name: Check out the repo
@@ -60,30 +60,51 @@ jobs:
         with:
           username: ${{ secrets.DOCKER_USERNAME }}
           password: ${{ secrets.DOCKER_PASSWORD }}
-      - name: Extract source (branch, name, tag)
-        id: source_info
-        run: |
-          echo ::set-output name=SOURCE_NAME::${GITHUB_REF#refs/*/}
-          echo ::set-output name=SOURCE_BRANCH::${GITHUB_REF#refs/heads/}
-          echo ::set-output name=SOURCE_TAG::${GITHUB_REF#refs/tags/}
+      - name: Extract metadata (tags, labels) for Docker
+        id: meta
+        uses: docker/metadata-action@98669ae865ea3cffbcbaa878cf57c20bbf1c6c38
+        with:
+          images: sprise/chain-reader
       - name: Download all workflow run artifacts
         uses: actions/download-artifact@v2
       - name: List files
         run: ls -ll
-      - name: Build and push chain-reader docker image
+      - name: Build and push image
         uses: docker/build-push-action@ad44023a93711e3deb337508980b4b5e9bcdc5dc
         with:
           context: ./deployment/chain-reader
           push: true
-          tags: ${{ steps.source_info.outputs.SOURCE_TAG }}
-          labels: chain-reader
-      # - name: Build and push indexer docker image
-      #   uses: docker/build-push-action@ad44023a93711e3deb337508980b4b5e9bcdc5dc
-      #   with:
-      #     context: ./deployment/indexer
-      #     push: true
-      #     tags: ${{ steps.branch_info.outputs.SOURCE_TAG }}
-      #     labels: indexer
+          tags: ${{ steps.meta.outputs.tags }}
+          labels: ${{ steps.meta.outputs.labels }}
+
+  docker-indexer:
+    needs: [build-cargo] 
+    name: Docker indexer
+    runs-on: ubuntu-latest
+    steps:
+      - name: Check out the repo
+        uses: actions/checkout@v2
+      - name: Log in to Docker Hub
+        uses: docker/login-action@f054a8b539a109f9f41c372932f1ae047eff08c9
+        with:
+          username: ${{ secrets.DOCKER_USERNAME }}
+          password: ${{ secrets.DOCKER_PASSWORD }}
+      - name: Extract metadata (tags, labels) for Docker
+        id: meta
+        uses: docker/metadata-action@98669ae865ea3cffbcbaa878cf57c20bbf1c6c38
+        with:
+          images: sprise/indexer
+      - name: Download all workflow run artifacts
+        uses: actions/download-artifact@v2
+      - name: List files
+        run: ls -ll
+      - name: Build and push image
+        uses: docker/build-push-action@ad44023a93711e3deb337508980b4b5e9bcdc5dc
+        with:
+          context: ./deployment/indexer
+          push: true
+          tags: ${{ steps.meta.outputs.tags }}
+          labels: ${{ steps.meta.outputs.labels }}
 
   docker-python:
     name: Docker code compiler
@@ -101,14 +122,6 @@ jobs:
         uses: docker/metadata-action@98669ae865ea3cffbcbaa878cf57c20bbf1c6c38
         with:
           images: sprise/code-compiler
-      - name: Extract source (branch, name, tag)
-        id: source_info
-        run: |
-          echo ::set-output name=SOURCE_NAME::${GITHUB_REF#refs/*/}
-          echo ::set-output name=SOURCE_BRANCH::${GITHUB_REF#refs/heads/}
-          echo ::set-output name=SOURCE_TAG::${GITHUB_REF#refs/tags/}
-      - name: List files
-        run: ls -ll
       - name: Get our docker file to the main source so we have the massbitprotcol app context
         run: cp deployment/code-compiler/Dockerfile Dockerfile
       - name: Build and push image
@@ -116,8 +129,8 @@ jobs:
         with:
           context: .
           push: true
-          tags: ${{ steps.source_info.outputs.SOURCE_TAG }}
-          labels: code-compiler
+          tags: ${{ steps.meta.outputs.tags }}
+          labels: ${{ steps.meta.outputs.labels }}
 
   docker-dashboard:
     name: Docker dashboard
@@ -135,14 +148,6 @@ jobs:
         uses: docker/metadata-action@98669ae865ea3cffbcbaa878cf57c20bbf1c6c38
         with:
           images: sprise/dashboard
-      - name: Extract source (branch, name, tag)
-        id: source_info
-        run: |
-          echo ::set-output name=SOURCE_NAME::${GITHUB_REF#refs/*/}
-          echo ::set-output name=SOURCE_BRANCH::${GITHUB_REF#refs/heads/}
-          echo ::set-output name=SOURCE_TAG::${GITHUB_REF#refs/tags/}
-      - name: List files
-        run: ls -ll
       - name: Get our docker file to the main source so we have the massbitprotcol app context
         run: cp deployment/dashboard/Dockerfile Dockerfile
       - name: Build and push image
@@ -152,5 +157,3 @@ jobs:
           push: true
           tags: ${{ steps.meta.outputs.tags }}
           labels: ${{ steps.meta.outputs.labels }}
-          # tags: ${{ steps.source_info.outputs.SOURCE_TAG }}
-          # labels: dashboard
