--- a/.github/workflows/tag.workflow.yml
+++ b/.github/workflows/tag.workflow.yml
@@ -65,10 +65,12 @@ jobs:
         uses: docker/metadata-action@98669ae865ea3cffbcbaa878cf57c20bbf1c6c38
         with:
           images: sprise/chain-reader
+      # - name: Download artifact
+      #   uses: actions/download-artifact@v2.14.0
+      #   with:
+      #     name: chain-reader
       - name: Download artifact
-        uses: actions/download-artifact@v2.14.0
-        with:
-          name: chain-reader
+        uses: dawidd6/action-download-artifact@v2
       - name: List files
         run: ls -ll
       - name: Build and push image
@@ -96,10 +98,12 @@ jobs:
         uses: docker/metadata-action@98669ae865ea3cffbcbaa878cf57c20bbf1c6c38
         with:
           images: sprise/indexer
+      # - name: Download artifact
+      #   uses: actions/download-artifact@v2
+      #   with:
+      #     name: index-manager-main
       - name: Download artifact
-        uses: actions/download-artifact@v2
-        with:
-          name: index-manager-main
+        uses: dawidd6/action-download-artifact@v2
       - name: List files
         run: ls -ll
       - name: Build and push image
