--- a/.github/workflows/tag.workflow.yml
+++ b/.github/workflows/tag.workflow.yml
@@ -32,18 +32,20 @@ jobs:
           rustup target add wasm32-unknown-unknown --toolchain nightly-2021-05-20
       - name: Build release
         run: cargo build --release
+    
       - name: List release files
         run: ls -ll target/release
-      - name: Upload chain-reader artifact # We will use it in the next docker step 
+
+      - name: Upload chain-reader artifact 
         uses: actions/upload-artifact@v2
         with:
-          name: ${{ env.CHAIN_READER }}
-          path: target/release/${{ env.CHAIN_READER }}
-      - name: Upload indexer artifact # We will use it in the next docker step 
+          name: chain-reader
+          path: target/release/chain-reader
+      - name: Upload indexer artifact 
         uses: actions/upload-artifact@v2
         with:
-          name: ${{ env.INDEXER }}
-          path: target/release/${{ env.INDEXER }}
+          name: index-manager-main
+          path: target/release/index-manager-main
 
   ##################
   # Running docker #
@@ -65,12 +67,13 @@ jobs:
         uses: docker/metadata-action@98669ae865ea3cffbcbaa878cf57c20bbf1c6c38
         with:
           images: sprise/chain-reader
-      # - name: Download artifact
-      #   uses: actions/download-artifact@v2.14.0
-      #   with:
-      #     name: chain-reader
-      - name: Download artifact
-        uses: dawidd6/action-download-artifact@v2
+
+      - name: Download artifact # Bug
+        uses: actions/download-artifact@v2
+        with:
+          name: chain-reader
+          path: 
+
       - name: List files
         run: ls -ll
       - name: Build and push image
@@ -98,12 +101,12 @@ jobs:
         uses: docker/metadata-action@98669ae865ea3cffbcbaa878cf57c20bbf1c6c38
         with:
           images: sprise/indexer
-      # - name: Download artifact
-      #   uses: actions/download-artifact@v2
-      #   with:
-      #     name: index-manager-main
-      - name: Download artifact
-        uses: dawidd6/action-download-artifact@v2
+
+      - name: Download artifact # Bug
+        uses: actions/download-artifact@v2
+        with:
+          name: index-manager-main
+
       - name: List files
         run: ls -ll
       - name: Build and push image
