--- a/.github/workflows/pr.workflow.yml
+++ b/.github/workflows/pr.workflow.yml
@@ -1,12 +1,9 @@
-name: Workflow for Feature branches
+name: Workflow for Pull Request
 
 on:
-  push:
-    branches:    
-      - '*'         # matches every branch that doesn't contain a '/'
-      - '*/*'       # matches every branch containing a single '/'
-      - '**'        # matches every branch
-      - '!master'   # excludes master
+  pull_request:
+    branches:
+      - main
 
 jobs:
   # Running test
