--- a/.github/workflows/tag.workflow.yml
+++ b/.github/workflows/tag.workflow.yml
@@ -17,7 +17,6 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v2
-      # - uses: Swatinem/rust-cache@v1
       - uses: actions-rs/toolchain@v1
         with:
           profile: minimal
@@ -68,11 +67,11 @@ jobs:
         with:
           images: sprise/chain-reader
 
-      - name: Download artifact # Bug
+      - name: Download artifact # Bug here
         uses: actions/download-artifact@v2
         with:
           name: chain-reader
-          path: 
+          path: target/release/chain-reader
 
       - name: List files
         run: ls -ll
@@ -106,6 +105,7 @@ jobs:
         uses: actions/download-artifact@v2
         with:
           name: index-manager-main
+          path: target/release/index-manager-main
 
       - name: List files
         run: ls -ll
