--- a/deployment/chain-reader/Dockerfile
+++ b/deployment/chain-reader/Dockerfile
@@ -1,6 +1,6 @@
 FROM rust
 COPY . .
 RUN ls -ll
-RUN ["chmod", "+x", "chain-reader/chain-reader"]
+RUN ["chmod", "+x", "chain-reader"]
 RUN ls -ll
-CMD ./chain-reader/chain-reader
+CMD .chain-reader
