--- a/.github/workflows/tag.workflow.yml
+++ b/.github/workflows/tag.workflow.yml
@@ -54,7 +54,6 @@ jobs:
     env:
       SERVICE_NAME: chain-reader
       DOCKER_IMAGE: sprise/chain-reader
-      DOCKER_BUILD_CONTEXT: ./deployment/chain-reader
     runs-on: ubuntu-latest
     steps:
       # Build
@@ -73,7 +72,10 @@ jobs:
           rustup target add wasm32-unknown-unknown --toolchain nightly-2021-05-20
       - name: Build release
         run: cargo build --release
-
+      - name: Copy build file & deployment Dockerfile to the same folder
+        run: |
+          cp target/release/chain-reader chain-reader
+          cp deployment/chain-reader/Dockerfile Dockerfile
       # Docker  
       - name: Log in to Docker Hub
         uses: docker/login-action@f054a8b539a109f9f41c372932f1ae047eff08c9
@@ -90,7 +92,7 @@ jobs:
       - name: Build and push image
         uses: docker/build-push-action@ad44023a93711e3deb337508980b4b5e9bcdc5dc
         with:
-          context: ${{ env.DOCKER_BUILD_CONTEXT }}
+          context: .
           push: true
           tags: ${{ steps.meta.outputs.tags }}
           labels: ${{ steps.meta.outputs.labels }}
@@ -100,7 +102,6 @@ jobs:
     env:
       SERVICE_NAME: index-manager-main
       DOCKER_IMAGE: sprise/indexer
-      DOCKER_BUILD_CONTEXT: ./deployment/indexer
     runs-on: ubuntu-latest
     steps:
       # Build
@@ -119,7 +120,10 @@ jobs:
           rustup target add wasm32-unknown-unknown --toolchain nightly-2021-05-20
       - name: Build release
         run: cargo build --release
-
+      - name: Copy build file & deployment Dockerfile to the same folder
+        run: |
+          cp target/release/index-manager-main index-manager-main
+          cp deployment/indexer/Dockerfile Dockerfile
       # Docker  
       - name: Log in to Docker Hub
         uses: docker/login-action@f054a8b539a109f9f41c372932f1ae047eff08c9
@@ -136,7 +140,7 @@ jobs:
       - name: Build and push image
         uses: docker/build-push-action@ad44023a93711e3deb337508980b4b5e9bcdc5dc
         with:
-          context: ${{ env.DOCKER_BUILD_CONTEXT }}
+          context: .
           push: true
           tags: ${{ steps.meta.outputs.tags }}
           labels: ${{ steps.meta.outputs.labels }}
