--- a/.github/workflows/tag.workflow.yml
+++ b/.github/workflows/tag.workflow.yml
@@ -79,6 +79,10 @@ jobs:
         with:
           name: chain-reader
           path: target/release/chain-reader
+
+      - name: Allow chain-reader binary to be executable
+        run: sudo chmod +x target/release/chain-reader/chain-reader
+
       - name: Get our docker file to the main source
         run: cp deployment/chain-reader/Dockerfile Dockerfile
       - name: List files
@@ -113,6 +117,10 @@ jobs:
         with:
           name: index-manager-main
           path: target/release/index-manager-main
+
+      - name: Allow index-manager-main binary to be executable
+        run: sudo chmod +x target/release/index-manager-main/index-manager-main
+
       - name: Get our docker file to the main source
         run: cp deployment/indexer/Dockerfile Dockerfile
       - name: List files
