--- a/.github/workflows/master.workflow.yml
+++ b/.github/workflows/master.workflow.yml
@@ -17,13 +17,14 @@ jobs:
        - uses: actions-rs/toolchain@v1
          with:
            profile: minimal
-           toolchain: stable
+           toolchain: 1.53.0
            target: wasm32-unknown-unknown
            override: true
        - name: Install missing dependencies
          run: |
            sudo apt update
            sudo apt install -y cmake pkg-config libssl-dev git gcc build-essential clang libclang-dev libpq-dev libudev-dev zlib1g-dev llvm make
+           rustup show
            rustup toolchain install nightly-2021-05-20
            rustup target add wasm32-unknown-unknown --toolchain nightly-2021-05-20
        - uses: Swatinem/rust-cache@v1
