--- a/.github/workflows/main.workflow.yml
+++ b/.github/workflows/main.workflow.yml
@@ -30,6 +30,7 @@ jobs:
           rustup toolchain install nightly-2021-05-21
           rustup target add wasm32-unknown-unknown --toolchain nightly-2021-05-21
           rustup component add rustfmt
+      - uses: Swatinem/rust-cache@v1  
       - name: Build release
         run: cargo build --release
 
